<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="PluralsCandidate">

	<string name="url_api">https://clubs.fsgt38.org/api/</string>
<!--	<string name="url_api">http://10.0.2.2/champ-manager/api/</string>-->

	<!-- Global -->
	<string name="app_name">FSGT 38</string>
	<string name="erreur">Erreur</string>
	<string name="chargement">Chargement en cours…</string>
	<string name="vide">Pas d\'élément à afficher</string>
	<string name="erreur_pdf">Pas de lecteur PDF sur cet appareil</string>

	<!-- Menu -->
	<string name="titre_classement">Classements</string>
	<string name="titre_coupes">Coupes</string>
	<string name="titre_matches">Matches</string>
	<string name="titre_historique">Historique</string>
	<string name="titre_coords">Coordonnées</string>
	<string name="action_fav_on">Mettre en favori</string>
	<string name="action_fav_off">Retirer des favoris</string>
	<string name="action_refresh">Rafraîchir</string>
	<string name="action_login">Connexion</string>
	<string name="action_saisie">Saisie des résultats</string>
	<string name="action_logout">Déconnexion</string>

	<!-- Ecran de recherche -->
	<string name="titre_recherche">Recherche</string>
	<string name="equipe_nom">%s (%s)</string>
	<string name="rechercher_equipe">Rechercher une équipe :</string>
	<string name="champ_selection">Ou sélectionner un championnat :</string>
	<string name="label_chargement">-- Chargement --</string>
	<string name="label_choix">-- Choisir --</string>
	<string name="favoris">Favoris</string>

	<!-- Entêtes de tableau -->
	<string name="head_pos">Pos</string>
	<string name="head_equipe">Equipe</string>
	<string name="head_pts">Pts</string>
	<string name="head_joues">J</string>
	<string name="head_gagnes">G</string>
	<string name="head_nuls">N</string>
	<string name="head_perdus">P</string>
	<string name="head_forfait">F</string>
	<string name="head_pour">Pour</string>
	<string name="head_contre">Contre</string>
	<string name="head_diff">Diff</string>
	<string name="head_pen">Pen</string>
	<string name="head_saison">Saison</string>
	<string name="head_champ">Poule</string>

	<!-- Pour les matches -->
	<string name="adecider">A décider</string>
	<string name="forfait">FO</string>
	<string name="ajouer">A jouer</string>
	<string name="score">%1$s - %2$s</string>
	<string name="exempt">Exempt: %1$s</string>
	<string name="vainqueur">Vainqueur %1$d</string>
	<string name="dt_semaine">Du %1$td/%1$tm/%1$ty au %2$td/%2$tm/%2$ty</string>
	<string name="dt_sdf">Du %1$td/%1$tm/%1$ty au %2$td/%2$tm/%2$ty (pas de terrain)</string>
	<string name="dt_jour">%1$ta %1$td/%1$tm/%1$ty à %2$tR</string>
	<string name="dt_jour_seul">%1$ta %1$td/%1$tm/%1$ty</string>
	<string name="dt_jour_seul_sdf">%1$ta %1$td/%1$tm/%1$ty (pas de terrain)</string>
	<string name="finale">Finale</string>
	<string name="niveau">1/%1$d finale</string>

	<!-- Ecran d'information -->
	<string name="responsable">Responsable %1$s</string>
	<string name="nom">Nom</string>
	<string name="mail">Mail</string>
	<string name="tel">Téléphone</string>
	<string name="terrain">Terrain</string>
	<string name="creneau">Créneau %1$d</string>
	<string name="creneau_val">Le %1$tA à %2$tR</string>
	<string name="adresse">Adresse</string>
	<string name="pasdeterrain">Pas de terrain</string>

	<!-- Ecran de login -->
	<string name="titre_login">Connexion</string>
	<string name="hint_login">Identifiant</string>
	<string name="hint_mdp">Mot de passe</string>
	<string name="btn_connexion">Connexion</string>
	<string name="erreur_login">Identifiants incorrects</string>

	<!-- Ecran de démarrage -->
	<string name="splash">Pratiquez le sport qui vous plaît comme il vous plaît!</string>

	<!-- Ecran des résultats -->
	<string name="titre_resultats">Résultats</string>

	<!-- Ecran image -->
	<string name="titre_feuille">Feuille de match</string>

	<!-- Ecran fair-play -->
	<string name="titre_fairplay">Feuille de fair-play</string>
	<string name="eval_ko">Mauvais</string>
	<string name="eval_normal">Normal</string>
	<string name="eval_ok">Bon</string>
	<string name="eval_oui">Oui</string>
	<string name="eval_non">Non</string>
	<string name="erreur_incomplet">Veuillez répondre à toutes les questions</string>
	<string name="menu_envoyer">Envoyer</string>
	<string name="lbl_commentaire">Commentaire</string>
	<string name="hint_commentaire">Pas de commentaire</string>
	<string name="fp_forfait">Le match a-t-il été joué?</string>
	<string name="fp_joue">Match joué</string>

	<!-- Ecran de saisie des résultats -->
	<string name="feuille_match">Feuille de match</string>
	<string name="feuille_match_capture">Capture de la feuille de match</string>
	<string name="feuille_match_visu">Visualisation de la feuille de match</string>
	<string name="resultat">Résultat</string>
	<string name="btn_envoi">Envoyer</string>
	<string name="erreur_appareil_photo">Aucun appareil photo détecté</string>
	<string name="lbl_forfait">Forfait</string>

</resources>
