<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:ignore="AlwaysShowAction">

	<item
		android:id="@+id/action_fav_on"
		android:icon="@drawable/ic_heart_outline"
		android:title="@string/action_fav_on"
		app:showAsAction="always"/>

	<item
		android:id="@+id/action_fav_off"
		android:icon="@drawable/ic_heart"
		android:title="@string/action_fav_off"
		app:showAsAction="always"/>

	<item
		android:id="@+id/action_refresh"
		android:icon="@drawable/ic_refresh"
		android:title="@string/action_refresh"
		app:showAsAction="always"/>

	<!--<item-->
		<!--android:id="@+id/action_login"-->
		<!--android:icon="@drawable/ic_key"-->
		<!--android:title="@string/action_login"-->
		<!--app:showAsAction="always"/>-->

</menu>
