<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:layout_marginStart="16dp"
	android:layout_marginEnd="16dp"
	android:layout_marginTop="16dp">

	<TextView
		android:id="@+id/question"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textAppearance="@style/TextAppearance.AppCompat.Medium"
		android:textColor="@android:color/black"
		android:textStyle="bold"/>

	<TextView
		android:id="@+id/description"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textAppearance="@style/TextAppearance.AppCompat"
		android:textStyle="italic"/>

	<RadioGroup
		android:id="@+id/grpEval"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal">

		<RadioButton
			android:id="@+id/btnKO"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/eval_ko"
			android:textColor="@color/text_danger"
			android:tag="-1"/>

		<RadioButton
			android:id="@+id/btnNormal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/eval_normal"
			android:tag="0"/>

		<RadioButton
			android:id="@+id/btnOK"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/eval_ok"
			android:textColor="@color/text_success"
			android:tag="1"/>
	</RadioGroup>

</LinearLayout>