<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		tools:context=".ResultatMatchActivity">

	<data>
		<variable name="activity" type="org.fsgt38.fsgt38.ResultatMatchActivity"/>
	</data>

	<LinearLayout android:orientation="vertical"
				  android:layout_width="match_parent"
				  android:layout_height="match_parent"
				  android:padding="16dp"
				  tools:ignore="LabelFor">

		<TableLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal">

			<!-- Equipe 1 -->
			<TableRow
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"	>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/txtEquipe1"
					android:layout_marginEnd="16dp"	/>

				<EditText
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:inputType="number"
					android:ems="2"
					android:id="@+id/txtScore1"
					android:maxLength="2"
					android:importantForAutofill="no"
					tools:targetApi="o"
					android:gravity="center"/>
			</TableRow>

			<!-- Forfait 1 -->
			<TableRow
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"	>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:layout_marginEnd="16dp"
					android:gravity="end"
					android:text="@string/lbl_forfait"
					android:textStyle="italic"/>

				<CheckBox
					android:id="@+id/chkForfait1"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					app:checkChanged="@{c -> activity.forfait1((Boolean)c)}"/>
			</TableRow>

			<!-- Equipe 2 -->
			<TableRow
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_marginTop="16dp">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/txtEquipe2"
					android:layout_marginEnd="16dp"/>

				<EditText
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:inputType="number"
					android:ems="2"
					android:maxLength="2"
					android:id="@+id/txtScore2"
					android:importantForAutofill="no"
					tools:targetApi="o"
					android:gravity="center"/>
			</TableRow>

			<!-- Forfait 2 -->
			<TableRow
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"	>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:layout_marginEnd="16dp"
					android:gravity="end"
					android:text="@string/lbl_forfait"
					android:textStyle="italic"/>

				<CheckBox
					android:id="@+id/chkForfait2"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					app:checkChanged="@{c -> activity.forfait2((Boolean)c)}"/>
			</TableRow>

			<!-- Feuille de match -->
			<TableRow
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_marginTop="16dp">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/feuille_match"
					android:layout_gravity="center_vertical"
					android:layout_marginEnd="16dp"/>

				<ImageButton
					android:id="@+id/btnCapture"
					android:layout_width="40dp"
					android:layout_height="40dp"
					android:background="@drawable/ic_camera"
					android:contentDescription="@string/feuille_match_capture"
					android:onClick="@{() -> activity.captureFeuille()}"/>
			</TableRow>

		</TableLayout>

		<!-- Bouton d'envoi -->
		<Button
			android:id="@+id/btnEnvoi"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:text="@string/btn_envoi"
			android:onClick="@{() -> activity.envoyer()}"/>

		<!-- Prévisualisation de la feuille de match -->
		<ImageView
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:layout_marginTop="16dp"
			android:minHeight="100dp"
			android:minWidth="100dp"
			android:id="@+id/imgFeuilleMatch"
			android:layout_gravity="center_horizontal"
			android:contentDescription="@string/feuille_match_visu"
			android:visibility="gone"/>

	</LinearLayout>
</layout>